Clean up warnings